--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6"
+    "bootstrap": "^4.0.0-alpha.6",
+    "bower": "^1.8.2",
+    "i": "^0.3.6"
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
